chore: update build scripts and Java configuration
- downgraded build_runner version in pubspec.yaml from 2.4.15 to 2.4.13
- added build_android_debug.sh script for assembling debug APK
- modified gradle_reset.sh to remove configuration cache option
- updated run_mobile.sh to streamline Gradle build process
- added setup_java17.ps1 script for configuring Gradle to use Java 17
- added setup_java17.sh script for configuring Gradle to use Java 17